k8s/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: devops-gitops-route
  namespace: default
spec:
  parentRefs:
    - name: devops-gitops-gateway
  rules:
    - backendRefs:
        - name: devops-gitops-service
          port: 3000
